package org.wavelabs.soundscope.use_case.identify;

public record IdentifyOD(String songTitle, String[] artists, String album) {
}
